<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_small"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_picture"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_marginTop="@dimen/margin_bigger"
        android:text="Hello World!"
        android:src="@drawable/ic_image"
        app:strokeWidth="@dimen/margin_smaller"
        app:strokeColor="@color/btn_ripple"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        android:contentDescription="@string/my_picture"
        android:background="@drawable/picture_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/subHeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_picture"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/tv_job"
        style="@style/Text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_smallest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:text="@string/profession" />

    <TextView
        android:id="@+id/tv_call"
        style="@style/Text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_job"
        android:text="@string/number"
        android:drawablePadding="@dimen/drawable_padding"
        app:drawableStartCompat="@drawable/ic_call"/>

    <TextView
        android:id="@+id/tv_email"
        style="@style/Text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_job"
        android:text="@string/email"
        android:drawablePadding="@dimen/drawable_padding"
        app:drawableStartCompat="@drawable/ic_email" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/Text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/drawable_padding"
        android:text="@string/address"
        app:drawableStartCompat="@drawable/ic_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_linked" />

    <TextView
        android:id="@+id/tv_linked"
        style="@style/Text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        android:layout_marginEnd="@dimen/margin_end"
        android:text="@string/linked_in"
        android:drawablePadding="@dimen/drawable_padding"
        app:drawableStartCompat="@drawable/ic_social" />

    <com.google.android.material.card.MaterialCardView
        style="@style/customCardview"
        android:layout_width="@dimen/cv_size"
        android:layout_height="@dimen/cv_size"
        android:layout_marginTop="@dimen/margin_mid"
        android:elevation="3dp"
        app:cardCornerRadius="@dimen/card_radius"
        app:contentPadding="@dimen/padding_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_mid"
            android:background="@android:color/transparent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_about"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:backgroundTint="@color/btn_color"
                android:drawableTop="@drawable/ic_person"
                android:text="@string/about"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/btn_education"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/btn_ripple" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_education"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_marginStart="@dimen/margin_mid"
                android:backgroundTint="@color/btn_color"
                android:drawableTop="@drawable/ic_school"
                android:text="@string/education"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_about"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/btn_ripple" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_skills"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_marginTop="@dimen/margin_mid"
                android:backgroundTint="@color/btn_color"
                android:drawableTop="@drawable/ic_skills"
                android:text="@string/skills"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_interests"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_about"
                app:rippleColor="@color/btn_ripple" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_interests"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_marginStart="@dimen/margin_mid"
                android:layout_marginTop="@dimen/margin_mid"
                android:backgroundTint="@color/btn_color"
                android:drawableTop="@drawable/ic_person"
                android:text="@string/interests"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_skills"
                app:layout_constraintTop_toBottomOf="@+id/btn_education"
                app:rippleColor="@color/btn_ripple" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>